--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
   flutter:
     sdk: flutter
   
-  # Core
+  # !!! Core
   dio: ^4.0.6
   logger: ^1.1.0
   hooks_riverpod: ^2.0.2
@@ -41,8 +41,9 @@ dependencies:
   json_annotation: ^4.7.0
   freezed_annotation: ^2.2.0
   go_router: ^5.1.1
+  flutter_secure_storage: ^6.0.0
 
-  # !!!
+  # !!
   cached_network_image: ^3.2.2
 
   # Optional
