--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
     sdk: flutter
   
   # !!! Core
+  flutter_localizations:
+    sdk: flutter      
   dio: ^4.0.6
   logger: ^1.1.0
   hooks_riverpod: ^2.0.2
@@ -69,12 +71,14 @@ dev_dependencies:
   json_serializable: ^6.0.0
   freezed: ^2.2.1
 
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter packages.
 flutter:
   uses-material-design: true
+  generate: true
 
   assets:
     - assets/
