--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   freezed_annotation: ^2.2.0
   go_router: ^5.1.1
   flutter_secure_storage: ^6.0.0
+  hive: ^2.2.3
+  path_provider: ^2.0.11
 
   # !!
   cached_network_image: ^3.2.2
