--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   # Optional
   salomon_bottom_bar: ^3.3.1
   material_design_icons_flutter: 5.0.6996
+  dart_des: ^1.0.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
