--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   flutter_secure_storage: ^6.0.0
   hive: ^2.2.3
   path_provider: ^2.0.11
+  tuple: ^2.0.1
 
   # !!
   cached_network_image: ^3.2.2
