--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,12 @@ dependencies:
   path_provider: ^2.0.11
   tuple: ^2.0.1
 
+  # !!! Ultilities
+  sized_context: ^1.0.0+1
+  rnd: ^0.2.0 # Random
+  flextras: ^1.0.0
+  extra_alignments: ^1.0.0+1
+
   # !!
   cached_network_image: ^3.2.2
 
