--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -10,6 +10,9 @@
 include: package:flutter_lints/flutter.yaml
 
 analyzer:
+  exclude:
+    - lib/**.freezed.dart
+    - lib/**.g.dart
   errors:
     invalid_annotation_target: ignore
 
