--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,22 +1,8 @@
 name: xbcodebase
 description: A new Flutter project.
 
-# The following line prevents the package from being accidentally published to
-# pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-# The following defines the version and build number for your application.
-# A version number is three numbers separated by dots, like 1.2.43
-# followed by an optional build number separated by a +.
-# Both the version and the builder number may be overridden in flutter
-# build by specifying --build-name and --build-number, respectively.
-# In Android, build-name is used as versionName while build-number used as versionCode.
-# Read more about Android versioning at https://developer.android.com/studio/publish/versioning
-# In iOS, build-name is used as CFBundleShortVersionString while build-number is used as CFBundleVersion.
-# Read more about iOS versioning at
-# https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-# In Windows, build-name is used as the major, minor, and patch parts
-# of the product and file versions while build-number is used as the build suffix.
 version: 1.0.0+1
 
 environment:
@@ -40,13 +26,16 @@ dependencies:
   hooks_riverpod: ^2.0.2
   flutter_hooks: ^0.18.5+1
   intl: ^0.17.0
-  json_annotation: ^4.7.0
-  freezed_annotation: ^2.2.0
   go_router: ^5.1.1
   flutter_secure_storage: ^6.0.0
   hive: ^2.2.3
   path_provider: ^2.0.11
   tuple: ^2.0.1
+  equatable: ^2.0.5
+  # annotation
+  json_annotation: ^4.7.0
+  freezed_annotation: ^2.2.0
+  riverpod_annotation: ^1.0.6
 
   # !!! Ultilities
   sized_context: ^1.0.0+1
@@ -62,8 +51,6 @@ dependencies:
   material_design_icons_flutter: 5.0.6996
   dart_des: ^1.0.2
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
@@ -80,12 +67,8 @@ dev_dependencies:
   build_runner: ^2.0.0
   json_serializable: ^6.0.0
   freezed: ^2.2.1
+  riverpod_generator: ^1.0.6
 
-
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
-
-# The following section is specific to Flutter packages.
 flutter:
   uses-material-design: true
   generate: true
