--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,2 +1,7 @@
 {
+    "files.exclude": {
+        "**/.DS_Store": true,
+        "**/*.freezed.dart": true,
+        "**/*.g.dart": true,
+    }
 }
