--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,3 @@
 {
-    "files.exclude": {
-        "**/.DS_Store": true,
-        "**/*.freezed.dart": true,
-        "**/*.g.dart": true,
-    }
+    "files.exclude": {}
 }
