--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,7 +6,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.18.2 <3.0.0'
+  sdk: '>=3.3.1 <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -21,13 +21,13 @@ dependencies:
   # !!! Core
   flutter_localizations:
     sdk: flutter      
-  dio: ^4.0.6
-  logger: ^1.1.0
+  dio: ^5.4.3+1
+  logger: ^2.3.0
   hooks_riverpod: ^2.0.2
-  flutter_hooks: ^0.18.5+1
-  intl: ^0.17.0
-  go_router: ^5.1.1
-  flutter_secure_storage: ^6.0.0
+  flutter_hooks: ^0.20.5
+  intl: ^0.18.1
+  go_router: ^14.1.3
+  flutter_secure_storage: ^9.2.1
   hive: ^2.2.3
   path_provider: ^2.0.11
   tuple: ^2.0.1
@@ -35,7 +35,7 @@ dependencies:
   # annotation
   json_annotation: ^4.7.0
   freezed_annotation: ^2.2.0
-  riverpod_annotation: ^1.0.6
+  riverpod_annotation: ^2.3.5
 
   # !!! Ultilities
   sized_context: ^1.0.0+1
@@ -48,7 +48,7 @@ dependencies:
 
   # Optional
   salomon_bottom_bar: ^3.3.1
-  material_design_icons_flutter: 5.0.6996
+  material_design_icons_flutter: ^7.0.7296
   dart_des: ^1.0.2
 
   cupertino_icons: ^1.0.2
@@ -62,12 +62,12 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^4.0.0
 
   build_runner: ^2.0.0
   json_serializable: ^6.0.0
   freezed: ^2.2.1
-  riverpod_generator: ^1.0.6
+  riverpod_generator: ^2.4.0
 
 flutter:
   uses-material-design: true
