--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   go_router: ^14.1.3
   flutter_secure_storage: ^9.2.1
   hive: ^2.2.3
+  path: ^1.9.0
   path_provider: ^2.0.11
   tuple: ^2.0.1
   equatable: ^2.0.5
