--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CLIENT_ID</key>
+	<string>218385830574-thpqdajgh9oo50nd2o1fbu17n4pm3oil.apps.googleusercontent.com</string>
+	<key>REVERSED_CLIENT_ID</key>
+	<string>com.googleusercontent.apps.218385830574-thpqdajgh9oo50nd2o1fbu17n4pm3oil</string>
 	<key>API_KEY</key>
 	<string>AIzaSyDLfAQK5rOnABvx2FuBdQWWERIQA5VKfX4</string>
 	<key>GCM_SENDER_ID</key>
