--- a/l10n.yaml
+++ b/l10n.yaml
@@ -2,3 +2,5 @@ arb-dir: lib/localization
 template-arb-file: app_en.arb
 output-localization-file: app_localizations.dart
 nullable-getter: false
+synthetic-package: false
+untranslated-messages-file: lib/localization/untranslated.txt
