--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flextras: ^1.0.0
   extra_alignments: ^1.0.0+1
   flutter_easyloading: ^3.0.5
+  pull_to_refresh_flutter3: ^2.0.2
 
   # !!
   cached_network_image: ^3.2.2
